--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,8 @@ body {
     color: #303841;
     display: block;
     margin: 0 0 0 0;
-    
+    background-image: repeating-linear-gradient(-45deg, #303841 5%, #203841 10%);
+    background-attachment: fixed;
 }
 
 #main {
@@ -18,6 +19,7 @@ body {
     border-bottom: 2px solid black;
     color: #EEEEEE;
     position: sticky;
+    top: 0;
     display: flex;
     width: 100%;
     background-image: linear-gradient(180deg, rgb(255, 87, 34) 50%, rgb(48, 56, 65));
@@ -31,6 +33,7 @@ body {
 .nav-item {
     color: inherit;
     text-decoration: none;
+    text-align: center;
 }
 
 .nav-link  {
