--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ body {
     margin: 0 0 0 0;
     background-image: repeating-linear-gradient(-45deg, #303841 5%, #203841 10%);
     background-attachment: fixed;
+    
 }
 
 #main {
@@ -28,6 +29,10 @@ body {
 .nav-item-container {
     padding: 10px 10px 10px 10px;
     border-right: 1px solid black;
+}
+
+.nav-item-container:hover {
+    background-image: linear-gradient(180deg, lightblue, rgb(48, 56, 65));
 }
 
 .nav-item {
@@ -58,6 +63,11 @@ section {
     width: 80%;
     margin: 0 auto;
     text-align: center;
+    /* 
+    animation-name: slide-up; 
+    animation-duration: 2s;
+    animation-timing-function: linear;
+    */
 }
 
 .header p {
@@ -88,10 +98,20 @@ ul {
 .contact-links-div img {
     display: inline-block;
     width: 30px;
+    border-radius: 50%;
+}
+
+.contact-links-div img:hover {
+    filter: drop-shadow(5px 5px 5px gray)
 }
 
 
 footer {
     text-align: center;
     font-size: x-small;
+}
+
+@keyframes slide-up{
+    0% {margin-top: 100%;}
+    100% {margin-top: 0;}
 }
