--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
     font-family: sans-serif;
+    font-size: x-large;
     color: #303841;
     display: block;
     margin: 0 0 0 0;
@@ -8,31 +9,40 @@ body {
     
 }
 
-#main {
-    max-width: 50%;
-    margin: 0 auto;
-    padding: 10px 0 3px 0;
-    background-color: #EEEEEE;
+h {
+    font-family: inherit;
+    font-size: xx-large;
 }
 
 .navbar {
     margin-bottom: 0;
-    border-bottom: 2px solid black;
     color: #EEEEEE;
     position: sticky;
     top: 0;
     display: flex;
     width: 100%;
-    background-image: linear-gradient(180deg, rgb(255, 87, 34) 50%, rgb(48, 56, 65));
 }
 
 .nav-item-container {
     padding: 10px 10px 10px 10px;
     border-right: 1px solid black;
+    transition: 0.2s;
+}
+
+.nav-block {
+    border-bottom: 1px solid black;
+    background-image: linear-gradient(180deg, rgb(255, 87, 34) 50%, rgb(48, 56, 65));
+}
+
+.nav-block-fill {
+    width: 100%;
 }
 
 .nav-item-container:hover {
     background-image: linear-gradient(180deg, lightblue, rgb(48, 56, 65));
+    scale: 1.2;
+    border: 2px solid black;
+    margin-bottom: -4px;
 }
 
 .nav-item {
@@ -49,6 +59,13 @@ body {
 }
 .nav-link:active {
     text-decoration: none;
+}
+
+#main {
+    max-width: 50%;
+    margin: 0 auto;
+    padding: 10px 0 3px 0;
+    background-color: #EEEEEE;
 }
 
 hr {
@@ -70,17 +87,56 @@ section {
     */
 }
 
-.header p {
-    margin-top: 0xp;
+h1, h2 {
+    margin-bottom: 0;
 }
 
-.profile-container {
-    width: 100%;
+.header p {
+    font-size: 14px;
+    margin-top: 0;
+}
+
+#profile {
+
+}
+
+.profile-child-container {
+    display: inline-block;
+    vertical-align: middle;
+    width: fit-content;
     text-align: center;
 }
 
-.profile-container h6, .profile-container p {
-    display: inline;
+td:nth-child(1) {
+    font-weight: bold;
+}
+
+td{
+    border-top: 1px solid gray;
+}
+
+#profile-table-container {
+    width: fit-content;
+    padding-left: 10px;
+    padding-right: 0;
+}
+
+#profile-picture {
+    width: 240px;
+    border-radius: 50%;
+}
+
+#profile-table {
+    margin: 0 auto;
+    padding: 0;
+    width: fit-content;
+    text-align: left;
+}
+
+#profile-table td {
+    padding-right: 10px;
+    padding-bottom: 5px;
+    min-width: fit-content;
 }
 
 ul {
@@ -88,6 +144,19 @@ ul {
     max-width: fit-content;
     margin: 0 auto;
 }
+
+ul li {
+    padding: 5px 0 5px 0 ;
+}
+
+#cv-table td {
+    vertical-align: top;
+    padding-bottom: 5px;
+    width: fit-content;
+    margin: 0 auto;
+    text-align: left;
+}
+
 
 .contact-links-div {
     max-width: 50%;
@@ -99,10 +168,12 @@ ul {
     display: inline-block;
     width: 30px;
     border-radius: 50%;
+    transition: 0.1s;
 }
 
 .contact-links-div img:hover {
-    filter: drop-shadow(5px 5px 5px gray)
+    filter: drop-shadow(5px 5px 5px gray);
+    scale: 1.1;
 }
 
 
