--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,20 @@ body {
     margin: 0 0 0 0;
     background-image: repeating-linear-gradient(-45deg, #303841 5%, #203841 10%);
     background-attachment: fixed;
+    
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+body::-webkit-scrollbar {
+    display: none;
+}
+  
+  /* Hide scrollbar for IE, Edge and Firefox */
+body {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
+  
 
 h1 {
     margin-top: 0;
@@ -201,6 +214,6 @@ footer {
 }
 
 @keyframes slide-up{
-    0% {margin-top: 100%;}
+    0% {margin-top: 90%;}
     100% {margin-top: 0;}
 }
